# download-manga

./: .gitignore  ex-config.json  go.mod  main.go  makefile  pyproject.toml  readme.md  requirements.txt
cmd/: root.go
src/: example.py  image.py  main.py  model.py
src/commands/: download.py
src/pages/: manga_download.py  preview_pdf.py  retry.py
src/services/: manga_a.py
src/utils/: dir.py  image.py  model.py  scrapping.py  streamlit_widget.py
